# community-research-mcp

./: .cache.json  .community_research_cache.json  .env.example  .gitignore  ARCHITECTURE.md  DOCS.md  DOCUMENTATION.md  FILES_CREATED.txt  FINAL_TEST_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PHASE_1_COMPLETE.md  QUICKSTART_STREAMING.md  README.md  SETUP_AND_TROUBLESHOOTING.md  STATUS.md  STREAMING_FEATURES.md  TESTING_GUIDE.md  TEST_INDEX.md  TEST_SUMMARY.md  UNIT_TEST_COMPLETION_REPORT.md  community_research_mcp.py  enhanced_mcp_utilities.py  initialize.bat  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.sh  setup.sh  streaming_capabilities.py  streaming_search.py  test_caching.py  test_deep_research.py  test_streaming.py  verify_tests.sh
api/: __init__.py  brave.py  discourse.py  firecrawl.py  github.py  hackernews.py  lobsters.py  serper.py  stackexchange.py  stackoverflow.py  tavily.py
community_research_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/: __init__.py  dedup.py  llm_clients.py  metrics.py  orchestrator.py  quality.py  reliability.py
docs/: api-reference.md  architecture.md  features.md  getting-started.md  quality_scoring.md
models/: __init__.py  config.py  search.py
tests/: README.md  __init__.py  conftest.py  golden_eval.py  golden_tasks.py  test_quality_scorer.py
tests/api/: test_firecrawl.py  test_tavily.py
tools/: __init__.py
utils/: __init__.py  cache.py  helpers.py  rate_limit.py
