[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "community-research-mcp"
version = "0.1.0"
description = "MCP server for community-driven developer research"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DocHatty"}
]
keywords = ["mcp", "search", "research", "stackoverflow", "github", "community"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.2.0",
    "fastmcp>=0.1.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.13.3",
    "google-genai>=1.19.0",
    "openai>=1.55.2",
]

[project.optional-dependencies]
reddit = [
    "praw>=7.8.1",
    "redditwarp>=1.3.0",
    "dnspython>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/DocHatty/community-research-mcp"
Repository = "https://github.com/DocHatty/community-research-mcp"
Issues = "https://github.com/DocHatty/community-research-mcp/issues"
